# squawk

./: CMakeLists.txt  conanfile.txt
src/api/: CMakeLists.txt  apiserver.cpp  apiserver.h  config.html.h  index.html.h  main.cpp  main.css.h
src/cms/: CMakeLists.txt  cmsserver.cpp  cmsserver.h  main.cpp
src/common/: constants.h  datastore.h  icons.h  squawkerrc.h  utils.h
src/discovery/: CMakeLists.txt  main.cpp  ssdpclientconnection.cpp  ssdpclientconnection.h  ssdpserver.cpp  ssdpserver.h  ssdpserverconnection.cpp  ssdpserverconnection.h  utils.h
src/scanner/: CMakeLists.txt  audio.cpp  audio.h  cdsscanner.cpp  cdsscanner.h  ebook.cpp  ebook.h  importalbum.cpp  importalbum.h  main.cpp
src/scanner2/: CMakeLists.txt  main.cpp  scanner.cpp  scanner.h  scanner2.cpp  scanner2.h
src/upnp/: CMakeLists.txt  _utils.h  didl.cpp  didl.h  main.cpp  server.cpp  server.h  upnpheaders.cpp  upnpheaders.h
src/www/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_bitmap.cpp  test_scanner.cpp
